Add title for calendar page

--- a/app/views/tournaments/index_calendar.html.erb
+++ b/app/views/tournaments/index_calendar.html.erb
@@ -1,3 +1,5 @@
+<%= title "Calendar" %>
+
 <div class="row" style="padding-bottom:15px">
   <div class="col-md-12">
     <div class="btn no-padding-left">
