Add title for user page

--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -4,7 +4,7 @@
 <% parsable = t.gsub!(" ", "T") %>
 <script>var deadline = "<%= parsable %>";</script>
 
-<%= title @tournament.short_title %>
+<% title @tournament.short_title %>
 
 <div class="row pad-bot-sm">
 
