--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+<% title @user.name %>
+
 <div class="row pad-top-sm">
   <div class="col-md-12">
     <div class="row portfolio-item thumbnail infoplus">
