--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -43,10 +43,13 @@
           <% else %>
             Games
         <% end %>
-
-          <span class="caret"></span>
+        <span class="caret"></span>
         </button>
         <ul class="dropdown-menu">
+          <% if params[:game_id] %>
+            <li><%= link_to "All Games", tournaments_path %></li>
+            <hr>
+          <% end %>  
           <% @games.each do |game| %>
           <li><%= link_to game.title, tournaments_path(sort_option: "game", game_id: game.id) %></li>
           <% end %>
