--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -1,3 +1,4 @@
+<% title @title %>
 <div class="row pad-bot-lg">
   <div class="col-md-6 col-lg-6 col-xs-12 hidden-xs col-sm-6">
     <div class="input-group" style="padding-top:2px">
