--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -1,3 +1,12 @@
+<% if display_welcome? %>
+<div class="container hidden-sm hidden-xs" >
+  <div class="alert alert-default alert-dismissible" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <p class="h1 light-text intro text-center">Welcome to <i class="logo-detail">ESPORTAL</i>&nbsp;!<br><p class="h3 light-text text-center"> Making tracking and following of esports tournaments easier </p></p>
+  </div>
+</div>
+<% end %>
+
 <div class="row pad-bot-lg">
   <div class="col-md-6 col-lg-6 col-xs-12 hidden-xs col-sm-6">
     <div class="input-group" style="padding-top:2px">
