Fix js files (out of asset pipeline)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,13 +28,13 @@
         </div>
         <div class="collapse navbar-collapse pull-right" id="myNavbar">
           <ul class="nav navbar-nav">
-            <% if current_page_is_tournament? || current_page_is_calendar? %>
+
               <li><a href="/tournaments" class="text-right"><i style="padding-top:2px" class="appzicon fa fa-th"></i></a></li>
               <li><a href="/calendar" class="text-right"><i class="appzicon text-right fa fa-calendar-o"></i></a></li>
-            <% end %>
+
 
             <% if user_signed_in? %>
-              <li><a href="/users/<%= current_user.id %>">Logged in as <%= current_user.email %></a></li>
+              <li><a href="/users/<%= current_user.id %>"><i style="padding-top:0px; font-size:22px" class="text-right appzicon fa fa-user"></i></a></li>
               <li><%= link_to('Log out', destroy_user_session_path, :method => :delete, class: "no-padding-right text-right") %></li>
             <% else %>
               <li><%= link_to('log in', user_omniauth_authorize_path(:google_oauth2), class: "no-padding-right text-right") %>
