--- a/app/views/tournaments/_tournament.html.erb
+++ b/app/views/tournaments/_tournament.html.erb
@@ -14,7 +14,7 @@
     <div class="info" id="<%= tournament.id %>">
       <div id="<%= tournament.id %>">
         <span class="h4">
-          <span class="label label-warning">Live</span>
+          <a href="/tournaments/<%= tournament.id %>"><span class="label label-warning">Live</span></a>
           <%= tournament.title%></span><br>
         <span id="<%= tournament.id %>-default-index-text" class="">
           <p class="pad-top-xs">
