--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -1,9 +1,16 @@
 <% if display_welcome? %>
 <div class="container hidden-sm hidden-xs" >
   <div class="alert alert-default alert-dismissible" role="alert">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <p class="h1 light-text intro text-center">Welcome to <i class="logo-detail">ESPORTAL</i>&nbsp;!<br><p class="h3 light-text text-center"> Making tracking and following of esports tournaments easier </p></p>
-  </div>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <p class="h1 light-text intro text-center">Welcome to <i class="logo-detail">ESPORTAL</i>&nbsp;!</p>
+  <br><br>
+  <span class='visible'>
+    <ul>
+      <li style="font-size:24px" class="light-text text-center">Making tracking and following of esports tournaments easier</li>
+      <li style="font-size:24px" class="light-text text-center">Keep track of your favorite players and teams</li>
+      <li style="font-size:24px" class="light-text text-center">Get a notification when an event is about to start</li>
+    </ul>
+  </span>
 </div>
 <% end %>
 
