--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,11 @@
   <div class="col-md-12">
     <div class="row portfolio-item thumbnail infoplus">
       <span class="h3"><%= @user.name %></span><br><hr>
+
+<script src="https://apis.google.com/js/platform.js" async defer></script>
+<!-- Place this tag where you want the widget to render. -->
+<div class="g-page" data-width="273" data-href="//plus.google.com/u/0/112779008100890553111" data-layout="landscape" data-rel="publisher" ></div>
+
       <p>Signed in as <%= @user.email %></p>
     </div>
   </div>
