--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
   <div class="col-md-12">
     <div class="row portfolio-item thumbnail infoplus">
       <span class="h2"><%= @user.name %></span><br><hr>
-      <p>Signed in as <a href="http://www.gmail.com"><%= @user.email %></a><br>Check <a href="https://calendar.google.com/">your calendar</a></p>
+      <p>Signed in as <a target="_blank" href="http://www.gmail.com"><%= @user.email %></a><br>Check <a target="_blank" href="https://calendar.google.com/">your calendar</a></p>
     </div>
   </div>
 </div>
