move tournament index js

--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -16,7 +16,7 @@
             <span class="h3 light-text red">(OVER)</span>
           <% else %>
             <span id="clockdiv">
-            <span class="h3 light-text red">Starts in </span><span class="days red h3 light-text text-right"></span> <span class="light-text red h3 hours"></span><span class="light-text red h3 minutes"></span><span class="light-text h3 red seconds">)</span>
+            <span class="h3 light-text red">Starts in </span><span class="days red h3 light-text text-right"></span> <span class="light-text red h3 hours"></span><span class="light-text red h3 minutes"></span><span class="light-text h3 red seconds"></span>
           <% end %>
         </span>
        </div>
