add ajax for subscribe button

--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -48,7 +48,7 @@
           <% end %>
         <% end %>
 
-        <%= button_to subscriptions_path(favorite_params),id: 'sub_text', action: "create", id:"calendar-submit", class: "buttony btn btn-border white btn-default", 'aria-label' => "Left Align", disabled: !user_signed_in? do %>
+        <%= button_to subscriptions_path(favorite_params),id: 'sub_text', action: "create", class: "calendar-submit buttony btn btn-border white btn-default", 'aria-label' => "Left Align", disabled: !user_signed_in? do %>
           <i class="fa fa-calendar-plus-o"></i> Subscribe
         <% end %>
       <% end %>
