--- a/app/views/tournaments/_tournament.html.erb
+++ b/app/views/tournaments/_tournament.html.erb
@@ -18,7 +18,7 @@
           <%= tournament.title%></span><br>
         <span id="<%= tournament.id %>-default-index-text" class="">
           <p class="pad-top-xs">
-            <b><%= tournament.city %></b>–<%= tournament.start %></p>
+            <b><%= tournament.city %></b>–<%= tournament.start.strftime('%a %d %b %Y') %></p>
         </span>
         <span id="<%= tournament.id %>-hover-index-text" style="display:none">
           <p class="pad-top-xs"><%= raw(tournament.description[0..180] + "...") %></p>
@@ -45,7 +45,7 @@
         <span id="<%= tournament.id %>-default-index-text" class="">
           <b><%= tournament.city %></b>
           –
-          <%= tournament.start %>
+          <%= tournament.start.strftime('%a %d %b %Y') %>
         </span>
         <span id="<%= tournament.id %>-hover-index-text" style="display:none">
           <p><%= raw(tournament.description[0..40]) %></p>
