--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -61,7 +61,7 @@
     </div>
   </div>
 </div>
-
+</div>
 <div class="container special">
   <div id="my-tournaments">
     <%= render @tournaments %>
