--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       $(document).ready(function(){
         $(window).konami(function(){
-          window.location.href = "http://gastongouron.github.io/game/index.html";
+          return window.location.replace("http://gastongouron.github.io/game/index.html");
         });
       });
     </script>      
