--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -526,13 +526,17 @@ header
 img.grayscale
   filter: url("data:image/svg+xmlutf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale") /* Firefox 3.5+, IE10 */
   filter: gray /* IE6-9 */
+  filter: grayscale(100%)
+  transition: all .6s ease
   -webkit-filter: grayscale(100%) /* Chrome 19+ & Safari 6+ */
   -webkit-transition: all .6s ease /* Fade to color for Chrome and Safari */
   -webkit-backface-visibility: hidden /* Fix for transition flickering */
 
+
 img.grayscale:hover
   filter: none
   -webkit-filter: grayscale(0%)
+  filter: grayscale(0%)
 
 img.grayscale:focus
   filter: none
