--- a/app/views/events/_calendar.html.erb
+++ b/app/views/events/_calendar.html.erb
@@ -6,7 +6,7 @@
 
     <% events.each do |event| %>
       <div class="row">
-        <div class="col-md-12" style="margin-bottom:10px">
+        <div class="col-md-12" style="margin-bottom:10px; max-width:200px">
           <% if event.image_default && event.image_default != "https://img.abiosgaming.com/events/No-Logo-Tournament-Small.png" %>
           <div class="thumbnail">
             <a href="/tournaments/<%=event.id%>"><img class="grayscale" src="<%= event.image_default %>"></a>
