--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -56,8 +56,9 @@ body
   #footer
     bottom: 0
     width: 100%
-    position: absolute
+    position: fixed
     height: $height-footer
+    clear: both
     background-color: white
 
   .footer-block
@@ -82,6 +83,9 @@ div.pagination
 .blue
   background-color: $esportal-secondary
   height: 40px
+
+div#my-tournaments > div:last-child
+  margin-bottom: 100px
 
 .esportal-secondary
   color: $esportal-secondary
