--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -1,4 +1,4 @@
-<% t = @tournament.start.to_s  %>
+<% t = @tournament.start_time.to_s  %>
 <% t.gsub!(" UTC", "") %>
 <% parsable = t.gsub!(" ", "T") %>
 <script>var deadline = "<%= parsable %>";</script>
@@ -11,7 +11,7 @@
       <div class="col-md-12 col-sm-12 h1"><%= get_game_title(@tournament.game_id) %>: <span class="light-text"><%= @tournament.short_title %>
           <% if @tournament.is_live? %>
             <span class="h3 light-text red">(LIVE)</span>
-          <% elsif @tournament.is_over? && @tournament.end > @tournament.start %>
+          <% elsif @tournament.is_over? && @tournament.end_time > @tournament.start_time %>
             <span class="h3 light-text red">(OVER)</span>
           <% else %>
             <span id="clockdiv">
@@ -80,7 +80,7 @@
         <p>Stream list soon</p>
       </section>
     <% end %>
-    <p class="mon"><b>Starts on <%= Date::MONTHNAMES[@tournament.start.mon] %><i class="day date"> <%= @tournament.start.day %></b></i>. Competitors to follow :</p><br><br>
+    <p class="mon"><b>Starts on <%= Date::MONTHNAMES[@tournament.start_time.mon] %><i class="day date"> <%= @tournament.start_time.day %></b></i>. Competitors to follow :</p><br><br>
 
     <section>
       <% @tournament.competitors.each do |competitor| %>
