access user image

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,9 +5,7 @@
     <div class="row portfolio-item thumbnail infoplus">
       <span class="h2"><%= @user.name %></span><br><hr>
 
-      <script src="https://apis.google.com/js/platform.js" async defer></script>
-      <!-- Place this tag where you want the widget to render. -->
-      <div class="g-page" data-width="273" data-href="//plus.google.com/u/0/112779008100890553111" data-layout="landscape" data-rel="publisher" ></div><br>
+      <img style="width: 10%;" src=<%= @user.image %><br>
 
       <p>Signed in as <a target="_blank" href="http://www.gmail.com"><%= @user.email %></a><br>Check <a target="_blank" href="https://calendar.google.com/">your calendar</a></p>
     </div>
