--- a/app/views/tournaments/_tournament.html.erb
+++ b/app/views/tournaments/_tournament.html.erb
@@ -45,7 +45,7 @@
           <span id="<%= tournament.id %>-default-index-text" class="">
             <b><%= tournament.city %></b>
             –
-            <%= tournament.start_time %>
+            <%= tournament.start_time.strftime('%a %d %b %Y') %>
           </span>
           <span id="<%= tournament.id %>-hover-index-text" style="display:none">
             <p><%= raw(tournament.description[0..40]) %></p>
