--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,12 +44,12 @@
 <div class="container" style="padding-top:0px">
   <%= yield %>
 </div>
-
+<div style="padding:100px"></div>
 <div id="footer" class="hidden-xs">
   <div class="container">
     <p class="footer-block">
       <span class="small pull-left">
-        <b class "black">eSportal</b> has been handcrafted with <i class="fa small p fa-heart red"></i> by <a href="https://github.com/manisaguana" target="_blank">Armani</a>, <a href="https://github.com/edella2" target="_blank">Eric</a>, <a href="https://github.com/peterwiebe" target="_blank">Peter</a>, <a href="https://github.com/gastongouron" target="_blank">Paul</a> and <a href="https://github.com/stevula" target="_blank">Steven</a>.
+        <b class "black"><a href="/tournaments">eSportal</a></b> has been handcrafted with <i class="fa small p fa-heart red"></i> by <a href="https://github.com/manisaguana" target="_blank">Armani</a>, <a href="https://github.com/edella2" target="_blank">Eric</a>, <a href="https://github.com/peterwiebe" target="_blank">Peter</a>, <a href="https://github.com/gastongouron" target="_blank">Paul</a> & <a href="https://github.com/stevula" target="_blank">Steven</a>.
       </span>
     </p>
   </div>
