Fix everything user views

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,8 @@
 
 <div class="row pad-top-sm">
 
-  <div class="col-md-2">
-    <div class="row portfolio-item thumbnail infoplus">
+  <div class="hidden-sm hidden-xs col-md-2">
+    <div class="row portfolio-item thumbnail infoplus" style="height:165px;width:165px">
       <img style="" src=<%= @user.image %><br>
     </div>
   </div>
